commit for submission

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 		</div>
 
 		<div class="socials">
-			<a target="_blank" href="https://github.com/XKingUnderdog"><img src="images/github.png"></a>
+			<a target="_blank" href="https://github.com/XolaniMgube/"><img src="images/github.png"></a>
 			<a target="_blank" href="https://www.linkedin.com/in/xolani-mgube-b50974185/"><img src="images/linkedin.png"></a>
 			<a target="_blank" href="https://www.facebook.com/xolani.mgube.54"><img src="images/facebook.png"></a>
 			<a target="_blank" href="https://www.instagram.com/onlyxking/"><img src="images/instagram.png"></a>
@@ -133,7 +133,7 @@
 			<div class="section one">
 				<p>Phone: 0743240074</p>
 				<p>Email: <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">info@xolanimgube.co.za</a></p>
-				<p>Github: <a href="https://github.com/XKingUnderdog">XKingUnderdog</a></p>
+				<p>Github: <a href="https://github.com/XolaniMgube/">XKingUnderdog</a></p>
 			</div>
 
 			<div class="section two">
