--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/screen-layout-large.css">
 	<link rel="stylesheet" type="text/css" href="css/screen-layout-medium.css" media="only screen and (min-width:601px) and (max-width:900px)">
-	<link rel="stylesheet" type="text/css" href="css/screen-layout-small.css" media="only screen and (min-width:50px) and (max-width: 600)">
+	<link rel="stylesheet" type="text/css" href="css/screen-layout-small.css" media="only screen and (min-width:50px) and (max-width: 600px)">
 
 	<!-- google fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet"> <!-- font for the rest of the page -->
@@ -23,7 +23,8 @@
 
 	<div id="projects-page">
 
-		<nav>
+		<nav class="nav">
+			<div class="hamburger"><img onclick="toggleNav()" src="images/hamburger.png"></div>
 			<ul>
 				<li><a href="index.html#home">home</a></li>
 				<li><a href="index.html#about">about</a></li>
@@ -129,5 +130,7 @@
 	</div>
 
 </body>
+
+<script src="js/main.js"></script>
 
 </html>
