profile image animation and target

--- a/index.html
+++ b/index.html
@@ -79,12 +79,13 @@
 		</div>
 
 		<div class="profile-pic">
-			<img src="images/about-image.png">
+			<a href="images/about-image.png">
+				<img src="images/about-image.png">
+			</a>
 		</div>
 
 		<article>
 			<p>I'm a fullstack web developer who is fascinated by the architecture of designing and building web layouts and web applications. I have experience in creating websites for small businesses, developing useful web applications using new and relevent technologies.</p>
-
 			<p>Based in Johannesburg, currently in training through a learnership program with Umuzi Acardemy, acquiring skills that enables the ability to develop high value products. </p>
 		</article>
 
