created the addClass function

--- a/index.html
+++ b/index.html
@@ -21,20 +21,16 @@
 </head>
 <body>
 
-
-
-
-
 	<!-- home section -->
 	<div id="home">
 
 		<nav class="nav">
 			<div class="hamburger"><img onclick="toggleNav()" src="images/hamburger.png"></div>
 			<ul>
-				<li><a class="active" href="#home">home</a></li>
-				<li><a href="#about">about</a></li>
-				<li><a href="projects.html">projects</a></li>
-				<li><a href="#contact">contact</a></li>
+				<li><a class="navigation active" href="#home" onclick="toggleNav()">home</a></li>
+				<li><a class="navigation" href="#about" onclick="toggleNav()">about</a></li>
+				<li><a class="navigation" href="projects.html" onclick="toggleNav()">projects</a></li>
+				<li><a class="navigation" href="#contact" onclick="toggleNav()">contact</a></li>
 			</ul>
 		</nav>
 
@@ -65,7 +61,6 @@
 		</div>
 
 	</div>
-
 
 
 
