added new skills and style

--- a/index.html
+++ b/index.html
@@ -89,10 +89,16 @@
 		</div>
 
 		<div class="skills">
-			<img src="images/html-image.png">
-			<img src="images/css-image.png">
-			<img src="images/javascript-image.png">
-			<img src="images/photoshop-image.png">
+			<img src="images/html.png">
+			<img src="images/css.png">
+			<img src="images/javascript.png">
+			<img src="images/react.png">
+			<img src="images/node.png">
+			<img src="images/postgres.png">
+			<img src="images/jasmine.png">
+			<img src="images/docker.png">
+			<img src="images/git.png">
+			<img src="images/photoshop.png">
 		</div>
 
 		<div class="about-arrow">
