download cv button and new cv

--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
 			</ul>
 		</nav>
 
-		<div class="space one"></div>
-
-		<div class="space two"></div>
-
 		<div class="intro">
 			<h1>Hi there<span class="dot">.</span></h1>
 			<h3>I AM</h3>
@@ -45,19 +41,14 @@
 			<h3>I'M A <span class="web-developer">WEB DEVELOPER</span></h3>
 		</div>
 
-		<div class="blog">
-			<button class="button"><a href="xolani-mgube-cv.pdf">view cv</a></button>
-		</div>
-
 		<div class="socials">
-			<a target="_blank" href="https://github.com/XolaniMgube/"><img src="images/github.png"></a>
-			<a target="_blank" href="https://www.linkedin.com/in/xolani-mgube-b50974185/"><img src="images/linkedin.png"></a>
-			<a target="_blank" href="https://www.facebook.com/xolani.mgube.54"><img src="images/facebook.png"></a>
-			<a target="_blank" href="https://www.instagram.com/onlyxking/"><img src="images/instagram.png"></a>
-		</div>
-
-		<div class="view-more">
-			<a href="#about" onclick="toggleNav()"><img src="images/arrow.png"></a>
+			<div class="links">
+				<a target="_blank" href="https://github.com/XolaniMgube/"><img src="images/github.png"></a>
+				<a target="_blank" href="https://www.linkedin.com/in/xolani-mgube-b50974185/"><img src="images/linkedin.png"></a>
+				<a target="_blank" href="https://www.facebook.com/xolani.mgube.54"><img src="images/facebook.png"></a>
+				<a target="_blank" href="https://www.instagram.com/onlyxking/"><img src="images/instagram.png"></a>
+			</div>
+			<button class="button"><a href="xolani-mgube-cv.pdf">view cv</a></button>
 		</div>
 
 	</div>
@@ -196,7 +187,7 @@
 			</div>
 
 			<div class="project-buttons">
-				<button class="button"><a href="http://pureproconcep.co.za/">visit site</a></button>
+				<button class="button"><a href="https://xolanimgube.github.io/pure-proconcep/">visit site</a></button>
 				<button class="button"><a href="https://github.com/XolaniMgube/pure-proconcep">view code</a></button>
 			</div>
 
