half of hover effect works

--- a/index.html
+++ b/index.html
@@ -96,16 +96,16 @@
 		</div>
 
 		<div class="skills">
-			<img class="skill" src="images/html.png">
-			<img class="skill" src="images/css.png">
-			<img class="skill" src="images/javascript.png">
-			<img class="skill" src="images/react.png">
-			<img class="skill" src="images/node.png">
-			<img class="skill" src="images/postgres.png">
-			<img class="skill" src="images/jasmine.png">
-			<img class="skill" src="images/docker.png">
-			<img class="skill" src="images/git.png">
-			<img class="skill" src="images/photoshop.png">
+			<img class="skill html" src="images/html.png" onmouseover="hoverEffect(event)">
+			<img class="skill css" src="images/css.png" onmouseover="hoverEffect(event)">
+			<img class="skill javascript" src="images/javascript.png" onmouseover="hoverEffect(event)">
+			<img class="skill react" src="images/react.png" onmouseover="hoverEffect(event)">
+			<img class="skill node" src="images/node.png" onmouseover="hoverEffect(event)">
+			<img class="skill postgres" src="images/postgres.png" onmouseover="hoverEffect(event)">
+			<img class="skill jasmine" src="images/jasmine.png" onmouseover="hoverEffect(event)">
+			<img class="skill docker" src="images/docker.png" onmouseover="hoverEffect(event)">
+			<img class="skill git" src="images/git.png" onmouseover="hoverEffect(event)">
+			<img class="skill photoshop" src="images/photoshop.png" onmouseover="hoverEffect(event)">
 		</div>
 
 		<div class="about-arrow">
