--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 				<a target="_blank" href="https://www.linkedin.com/in/xolani-mgube-b50974185/"><img
 						src="images/linkedin.png"></a>
 				<a target="_blank" href="https://www.facebook.com/xolani.mgube.54"><img src="images/facebook.png"></a>
-				<a target="_blank" href="https://www.instagram.com/onlyxking/"><img src="images/instagram.png"></a>
+				<a target="_blank" href="https://www.instagram.com/xolani.underdog/"><img src="images/instagram.png"></a>
 			</div>
 			<button class="button"><a href="xolani-mgube-cv.pdf">view cv</a></button>
 		</div>
@@ -168,50 +168,6 @@
 
 
 
-
-
-
-
-
-		<!-- Project 2 ---------------------------------------------------------------------------------------------------------------->
-		<div class="project two">
-			<div class="project-image">
-				<img src="./images/pure-proconcep-project.png">
-			</div>
-
-			<div class="project-info">
-
-				<div class="details">
-					<h4>Pure Proconcep <span>(client website)</span></h4>
-				</div>
-
-
-				<article class="description">
-					<p>Pure Proconcep is live website that I build for a local client area at a very low budget to help
-						get recognition for his business and also be a way for me to enhance my skills.</p>
-				</article>
-
-				<div class="tools">
-					<h4>Tools Used..</h4>
-					<ul>
-						<li>HTML</li>
-						<li>CSS 3 & Grid</li>
-						<li>Javascript</li>
-						<li>PHP</li>
-						<li>Photoshop</li>
-					</ul>
-				</div>
-
-			</div>
-
-			<div class="project-buttons">
-				<button class="button"><a href="https://xolanimgube.github.io/pure-proconcep/">visit site</a></button>
-				<button class="button"><a href="https://github.com/XolaniMgube/pure-proconcep">view code</a></button>
-			</div>
-
-
-		</div>
-
 	</div>
 
 
@@ -242,14 +198,14 @@
 		<footer>
 			<div class="section one">
 				<p>Phone: 0743240074</p>
-				<p>Email: <a href="mailto:someone@example.com?Subject=Hello%20again"
-						target="_top">info@xolanimgube.co.za</a></p>
+				<p>Email: <a href="mailto:xnmgube@gmail.com?Subject=Hello%20again"
+						target="_top">xnmgube@gmail.com</a></p>
 				<p>Github: <a href="https://github.com/XolaniMgube/">XolaniMgube</a></p>
 			</div>
 
 			<div class="section two">
 				<p>Facebook: <a href="https://www.facebook.com/xolani.mgube.54">Xolani N Mgube</a></p>
-				<p>Instagram: <a href="https://www.instagram.com/onlyxking/">@xolani.underdog</a></p>
+				<p>Instagram: <a href="https://www.instagram.com/xolani.underdog/">@xolani.underdog</a></p>
 				<p>LinkedIn: <a href="https://www.linkedin.com/in/xolani-mgube-b50974185/">Xolani Mgube</a></p>
 			</div>
 
